--- a/Day2 - Solar System/index.html
+++ b/Day2 - Solar System/index.html
@@ -79,7 +79,7 @@
      }
 </style>
 <body style="background: linear-gradient(5deg, black,#292828);">
-<selection class="universe">
+<select class="universe">
     <div class="ss">
         <div class="sun"></div>
         <div class="earth"></div>
